# UGP

./: .gitignore  README.md  notes.txt  readME.md
libOTe/: CMakeLists.txt  CMakePresets.json  README.md  build.py
libOTe/cmake/: Config.cmake.in  ConfigVersion.cmake.in  buildOptions.cmake  buildOptions.cmake.in  install.cmake  libOTeConfig.cmake  libOTeConfigVersion.cmake  libOTeDepHelper.cmake  libOTePreamble.cmake
libOTe/cryptoTools/cryptoTools/: CMakeLists.txt
libOTe/cryptoTools/tests_cryptoTools/: BtChannel_Tests.cpp
libOTe/frontend/: ExampleBase.cpp  ExampleBase.h  ExampleMessagePassing.h  ExampleNChooseOne.cpp  ExampleNChooseOne.h  ExampleSilent.cpp  ExampleSilent.h  ExampleTwoChooseOne.cpp  ExampleTwoChooseOne.h  ExampleVole.cpp  ExampleVole.h  benchmark.h  main.cpp
libOTe/libOTe/: CMakeLists.txt  config.h.in  version.h
libOTe/libOTe/Base/: BaseOT.h  MasnyRindal.cpp  MasnyRindal.h  MasnyRindalKyber.cpp  MasnyRindalKyber.h  McRosRoy.h  McRosRoyTwist.h  MockOt.h  SimplestOT.cpp  SimplestOT.h
libOTe/libOTe/Dpf/: DpfMult.h  RegularDpf.h  SparseDpf.h  TernaryDpf.h
libOTe/libOTe/NChooseOne/: NcoOtExt.cpp
libOTe/libOTe/Tools/: CoeffCtx.h  Coproto.h  DefaultCurve.h  GenericLinearCode.h  QuasiCyclicCode.h  RepetitionCode.h  (+2 more)
libOTe/libOTe_Tests/: BlkAccCode_Tests.cpp  BlkAccCode_Tests.h  CMakeLists.txt  Dpf_Tests.cpp  Dpf_Tests.h  EACode_Tests.cpp  EACode_Tests.h  ExConvCode_Tests.cpp  ExConvCode_Tests.h  Foleage_Tests.cpp  Foleage_Tests.h  Permutation_Tests.cpp  Permutation_Tests.h  Pprf_Tests.cpp  Pprf_Tests.h  SilentOT_Tests.cpp  SilentOT_Tests.h  SoftSpoken_Tests.cpp  SoftSpoken_Tests.h  TungstenCode_Tests.cpp  TungstenCode_Tests.h  UnitTests.cpp  Vole_Tests.cpp  Vole_Tests.h  bitpolymul_Tests.cpp  bitpolymul_Tests.h
mpc/: CMakeLists.txt  Makefile  README.md  common.hpp  doram.hpp  doram.tpp  dpf.hpp  dpf_test.cpp  dpfio.hpp  locoram.hpp  locoram.tpp  locoram_test.cpp  main.cpp  mpcops.hpp  mpcops_old.hpp  mpcops_test.cpp  network.hpp  ot_manager.hpp  ot_tests.cpp  prg.h  prg.hpp  shares.hpp  shares_old.hpp  shares_test  shares_test.cpp  test_shares  types.hpp  types_test  types_test.cpp
mpc/dpf/: Makefile  block.h  dpf  dpf-copy.cpp  dpf.cpp  dpf.h  dpf.hpp  dpf_test.cpp  log  p2  preproc  preproc.cpp  prg.h  shares.h
(+81 files in other folders)
